---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Resume development
    - Do not drop a rocket silo
    - Setup the hidden surface
    - Sum the total items inside with circuits
    - Add note about the machine being ticked
    - Prepare the recipe icon
    - Lock the quality disruptor to an "any quality" recipe
    - Test with the repair pack
    - Make the entity blueprintable
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 01. 10
  Info:
    - Reword readme for monospaced goodness
    - Stash data stage progress
    - Make frame count coexist with the shadow
    - Try to get the working visualization to work
    - Fix the working viz due to nesting
    - Make it look good day and night
    - Credit "hurricane compatible graphics_set" to xorimuth
    - Tweak the (animation) speed
    - Add sounds
    - Make the funnel not transparent (kinda distracting)
    - Fix the glow visualization desyncing
    - Stash crafting speed tweaks (speed modules will be bad)
    - Stash mod comparison table
    - Set minimum animation speed to 50%
    - Initial draft of multiblock entity
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 01. 03
  Info:
    - Initial commit