@@ -91,6 +91,6 @@ for _, event in ipairs({
   -- defines.events.on_entity_cloned,
 }) do
   script.on_event(event, Handler.on_created_entity, {
-    {filter = "name", name = mod_prefix .. "furnace"},
+    {filter = "name", name = mod_prefix .. "crafter"},
   })
 end
