@@ -1,6 +1,6 @@
 [entity-name]
-quality-disruptor--furnace=Quality disruptor
-quality-disruptor--container=Quality disruptor
+quality-disruptor--crafter=Quality disruptor
+quality-disruptor--container=Quality disruptor base
 
 [space-location-name]
 quality-disruptor=Quality disruptor
