@@ -11,6 +11,7 @@ Date: ????
     - Lock the quality disruptor to an "any quality" recipe
     - Test with the repair pack
     - Make the entity blueprintable
+    - Rename furnace to crafter
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 01. 10
